--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 name: 'Multi-tissue brain TWAS'
-repo: 'http://github.com/hsun3163/jnbinder'
+repo: 'http://github.com/hsun3163/neuro-twas'
 footer: "&copy 2020-2021 Hao Sun, Department of Neurology, Columbia University"
 include_dir: ["analysis", "workflow"]
 # exclude_file: []
