--- a/code/csg.yml
+++ b/code/csg.yml
@@ -26,6 +26,7 @@ hosts:
       #{partition}
       module load Singularity
       module load R
+      source /home/hs3163/.bashrc
       export PATH=$HOME/miniconda3/bin:$PATH
       export SINGULARITY_BIND="/mnt/mfs/ctcn/:/mnt/mfs/ctcn/"
       set -e
